         In "Edit Launcher", "Audit ROMs / Launcher view mode" include a new option like
         "Create PClone DAT based on ROM filenames"

WIP      Options to generate the 1G1R parent list, like prefer ROMs from Europe, Japan or USA.
         This resembles what NARS No-Intro filtering does.


[B]Advanced Emulator Launcher | version 0.9.7 | XX September 2017[/B]

FEATURE  Add an option to see ROM Maps image if it exists.
         Add an option in context menu "View ROM/Launcher".

FEATURE  Audit all launchers. Check if app exists, ROM path exits, artwork paths are configured,
         etc. When a user uses XML to import configurations it is easy to make a typo when
         writing directory names, etc. This command will report if AEL configuration is OK.

FEATURE  Use substituted artwork from the Parent/Clone group.
         So far implemented only in "Edit Launcher", "Manage ROMs", "Rescan ROMs local assets/artwork"

FEATURE  I discovered that in the ROM Scanner most of the time is spend looking for artwork. Before,
         I though it was the Offline scraper the culprit. Instead of using FileName().exists()
         create a set with all files in the directory and use that for the search.
         Implemented only in "Edit Launcher", "Manage ROMs", "Rescan ROMs local assets/artwork",
         must be ported to the ROM scanner if it works well (faster than the current approach).

FEATURE  ROM scanner should be able to scrap all assets, not just the ones supported by the
         selected scraper. This will require a redesign of the current scraping engine.
         See https://forum.kodi.tv/showthread.php?tid=287826&pid=2628383#pid2628383 and next post.

FEATURE  Make sure all asset scraper requests are cached in the ROM scanner. For example, Title
         scraper choose a game in the list, then Snap scraper for the same ROM must use the
         cached selected game.
