@@ -69,6 +69,8 @@ WIP      Options to generate the 1G1R parent list, like prefer ROMs from Europe,
 
 [B]Advanced Emulator Launcher | version 0.9.7 | XX September 2017[/B]
 
+FEATURE  Added a lot of new platforms.
+
 FEATURE  Add an option to see ROM Maps image if it exists.
          Add an option in context menu "View ROM/Launcher".
 
